# compliance-playbooks

./: .gitignore  README.md  ansible.cfg  bootstrap.yml  local.yml
compliance-engine/: config.yaml  pyproject.toml
compliance-engine/engine/: db.py  evaluator.py  ise.py  main.py  s3.py
compliance-engine/systemd/: compliance-engine.service  compliance-engine.timer
docs/: compliance-tuning.md  deployment.md
grafana/: dashboard.json
group_vars/: all.yml
iac/: iam-client-policy.json  iam-engine-policy.json  minio-client-policy-template.json  s3-bucket-policy.json
packaging/: build-rpm.sh  client.conf  fedora-compliance-client.spec  vars.yml
roles/openscap/defaults/: main.yml
roles/openscap/files/: parse_oscap.py
roles/openscap/tasks/: main.yml
roles/report/tasks/: main.yml
roles/security_checks/tasks/: main.yml
roles/self_check/tasks/: main.yml
systemd/: ansible-pull.service  ansible-pull.timer
test/: config.yaml  docker-compose-test.yaml  local-vars.yml  run-test.sh  seed.py
test/fake-ise/: Dockerfile  main.py
test/grafana/: compliance-dashboard.json
test/grafana/provisioning/dashboards/: provider.yaml
test/grafana/provisioning/datasources/: postgres.yaml
